welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: not found: value estsurbiscuit
estsurbiscuit=false
^Program:3: error: not found: value estsurbiscuit
while (estsurbiscuit=false){
       ^