welcome.lessons.welcome.loopfor.LoopFor.scala.code
estsurbiscuit=false
var i=0
while (estsurbiscuit=false){
  avance()
  i=i+1
}

for (j<- 1 to i){
  recule()
}